--- a/signgpt/src/App.css
+++ b/signgpt/src/App.css
@@ -1,38 +1,28 @@
-.App {
+.Chat {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.Chat .row {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+#message {
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#paperPlane {
+  position: absolute;
+  right: 25px;
+  bottom: 10px;
+  width: fit-content;
+}
+
+.interactive {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.interactive video {
+  width: 100%;
 }
