--- a/signgpt/src/App.css
+++ b/signgpt/src/App.css
@@ -18,10 +18,6 @@ body {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-
-  
-  
-  
 }
 
 .newBtn {
@@ -91,10 +87,28 @@ ul{
 }
 
 .Message {
+  display: flex;
+  align-items: top;
+  justify-content: center;
+  background-color: rgb(234, 234, 234);
+  padding: 20px;
 }
 
-.Message img {
+
+
+
+img {
   width: 50px;
   padding: 8px;
   background-color: #2A6F96;
+}
+
+.image {
+  flex-basis: 40%
+}
+
+.text {
+  font-size: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
