--- a/signgpt/src/App.css
+++ b/signgpt/src/App.css
@@ -70,6 +70,7 @@ ul {
   justify-content: center;
   width: 100%;
   margin: 0;
+  margin-bottom: 1em;
 }
 
 .Messages {
@@ -174,4 +175,10 @@ img {
   width: 22px;
   height: 22px;
   transform: translate(65%, 65%);
+}
+
+.details {
+  background-color: #D9D9D9;
+  padding: .5em;
+  border-radius: 5px;
 }
